# ChangeLog for sys-apps/dcron
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/dcron/Attic/ChangeLog,v 1.4 2002/04/20 22:03:25 bangert Exp $

  20 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/crontab

  fixed /var/spool/cron/lastrun
  added support for cron.hourly

  20 Apr 2002; Thilo Bangert <bangert@gentoo.org> dcron-2.7-r8.ebuild
  
  add PROVIDE="virtual/cron" and RDEPEND="!virtual/cron sys-apps/cronbase"
  added config section to activate /etc/cron.{hourly..etc}

  20 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/cron.rc6
  
  add "provide cron" to use

  20 April 2002; Martin Schlemmer <azarah@gentoo.org> files/dcron.rc6 :

  Update to NEED "logger"


*dcron-2.7-r8 (21 Mar 2002)

  21 Mar 2002; Donny Davies <woodchip@gentoo.org> dcron-2.7-r8.ebuild,
  files/dcron-2.7-whitespace.diff :

  Added patch from Matt Dillon to fix crontabs that begin with whitespace.
  Thanks to everybody who helped analyze this problem.