@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/dcron
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/dcron/Attic/ChangeLog,v 1.4 2002/04/20 22:03:25 bangert Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/dcron/Attic/ChangeLog,v 1.5 2002/05/04 17:18:13 bangert Exp $
+
+    4 May 2002; Thilo Bangert <bangert@gentoo.org> dcron-2.7-r8.ebuild
+
+  made lintool happy - added LICENSE
+  
+
+*dcron-2.7-r9 (20 Apr 2002)
 
   20 Apr 2002; Thilo Bangert <bangert@gentoo.org> files/crontab
 
